--- a/styles.css
+++ b/styles.css
@@ -3,12 +3,17 @@ body {
 }
 
 .header {
+    display: flex;
+    flex-direction: row;
     background-color: #4caf50;
     color: white;
     padding: 20px;
     text-align: center;
+    
 }
-
+.bizLogo{
+    height: 50px;
+}
 .chat-container {
     width: 100%;
     max-width: 1200px;
